--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,331 @@
-.App {
-  text-align: center;
+* {
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: url("./images/background.jpeg") no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.intro-page{
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.intro-title{
+  color:#5d6ec2a8;
+  font-size: 40px;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.intro-desc{
+  color: #5d6ec2a8;
+  font-size: 25px;
+  margin-top: 5px;
+  margin-bottom: 25px;
+  letter-spacing: 1px;
+  font-style: italic;
+  text-align: center;
+}
+
+.intro-button{
+  color: #fff ;
+  background: #3ca9e490 ;
+  font-size: 20px;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  width: 200px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.create-quiz{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+}
+
+.select{
+  padding: 10px 0px;
+  font-size: 15px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  width: 170px;
+  text-align: center;
+  margin-bottom: 25px;
+  background: #f9f9f9;
+  font-weight: 600;
+  color:#9986B4;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: capitalize;
+  padding: 20px 150px;
+  color:#fff; /*104863*/
+}
+
+.header-title{
+  cursor: pointer;
+  transition: 0.6s ease;
+}
+
+.header-title:hover{
+  transform: scale(1.2);
+}
+
+.info{
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.info-span{
+  margin: 0 15px;
+  font-size: 18px;
+  font-weight: 600;
+  transition: 0.6s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.info-span:hover{
+  transform: scale(1.2);
+}
+
+.quiz-page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 100px;
+}
+
+.question-div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 1000px;
+  margin-bottom:60px;
+}
+
+.question-div:last-child{
+  margin-bottom: 0;
+}
+
+.question{
+  color:#fff;
+  font-size: 20px;
+  text-align: left;
+  margin-bottom: 20px;
+  padding: 20px 18px ;
+  background: #67cce0; /*67e0bc*/
+  border-radius: 10px;
+  text-align: center;
+  width: 900px;
+  font-weight: 600;
+}
+
+.answer-div{
+  display: flex;
+  justify-content: space-evenly;
+  width: 900px;
+}
+
+.answer{
+  color: #fff ;
+  background: #F0A6CA ;
+  font-size: 15px;
+  padding: 10px 10px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  width: 180px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+  height: 40px;
+  overflow-x: scroll;
+  transition: 0.6s ease;
+}
+
+.answer::-webkit-scrollbar{
+  display: none;
+}
+
+.checked{
+  color:#F0A6CA;
+  background: #fff;
+}
+
+.check-div{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 20px 0;
+  width: 900px;
+  margin: auto;
+}
+
+.check-button{
+  color: #fff ;
+  background: #d1a6f0 ;
+  font-size: 15px;
+  padding: 10px 10px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  width: 200px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+  height: 40px;
+  transition: 0.6s ease;
+}
+
+.correct-count{
+  color: #fff;
+  margin-right: 20px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.correct{
+  background: rgb(112, 192, 116);
+  color:#fff;
+}
+
+.false{
+  background: rgb(214, 69, 69);
+}
+
+@media(max-width:940px){
+  .question{
+    width: 700px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .answer-div{
+    width: 700px;
+  }
+
+  .answer{
+    width: 150px ;
+  }
+
+  .check-div{
+    width: 700px;
+  }
+}
+
+@media(max-width:740px){
+  .header{
+    padding: 20px 80px;
+  }
+
+  .question{
+    width: 500px;
+  }
+
+  .answer-div{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .answer{
+    width: 300px;
+    margin-bottom: 20px;
+  }
+
+  .answer:last-child{
+    margin-bottom: 0;
+  }
+  
+  .check-div{
+    width: 500px;
+  }
+}
+
+@media(max-width:550px){
+  
+  .intro-desc{
+    width: 320px;
+  }
+
+  .create-quiz{
+    width: 320px;
+  }
+
+  .select{
+    padding: 10px 0px;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 25px;
+    background: #f9f9f9;
+    font-weight: 600;
+    color:#9986B4;
+  }
+
+  .header{
+    padding: 20px 40px;
+  }
+}
+
+@media(max-width:540px){
+  .question{
+    width: 400px;
+  }
+  .answer{
+    width: 280px;
+  }
+
+  .check-div{
+    flex-direction: column;
+    width: 400px;
+  }
+  .correct-count{
+    margin-bottom: 20px;
+  }
+}
+
+@media(max-width:470px){
+
+  .header{
+    justify-content: center;
+  }
+
+  .info{
+    display: none;
+  }
+
+  .question{
+    width: 320px;
+  }
+  .answer{
+    width: 250px;
+  }
+
+  .check-div{
+    width: 320px;
   }
 }
